--- a/template/en/default/account/prefs/prefs.html.tmpl
+++ b/template/en/default/account/prefs/prefs.html.tmpl
@@ -43,14 +43,14 @@
    style_urls = ['skins/standard/admin.css']
  %]
 
-[% tabs = [ { name => "account", label => "Account Preferences", 
-              link => "userprefs.cgi?tab=account", saveable => "1" },
-            { name => "settings", label => "General Preferences", 
+[% tabs = [{ name => "settings", label => "General Preferences",
               link => "userprefs.cgi?tab=settings", saveable => "1" },
             { name => "email", label => "Email Preferences", 
               link => "userprefs.cgi?tab=email", saveable => "1" },
             { name => "saved-searches", label => "Saved Searches", 
               link => "userprefs.cgi?tab=saved-searches", saveable => "1" },
+            { name => "account", label => "Name and Password",
+              link => "userprefs.cgi?tab=account", saveable => "1" },
             { name => "permissions", label => "Permissions", 
               link => "userprefs.cgi?tab=permissions", saveable => "0" } ] %]
 
